[package]
name = "dhcp_parser"
version = "0.1.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://github.com/pwoolcoc/dhcp_parser"
description = """
DHCP parser using nom
"""
license = "MIT"

[dependencies]
nom = "*"
enum_primitive = "*"

[dependencies.num]
version = "*"
default-features = false

[dependencies.rest_easy]
path = "../rest_easy"
