[package]
name = "dhcp_parser"
version = "0.1.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://github.com/pwoolcoc/dhcp_parser"
description = """
DHCP parser using nom
"""
license = "MIT"

[dependencies]
nom = "0.3"
enum_primitive = "0.1"

[dependencies.num]
version = "0.1"
default-features = false
